# hardcaml-gameboy

./: .editorconfig  .gitignore  .gitmodules  .ocamlformat  CLAUDE.md  Makefile  README.md  debug_pixels.ml  dune  dune-project  flake.nix  hardcaml-gameboy.opam
.github/workflows/: ci.yml
constraints/: README.md
constraints/generic/: gameboy_clocks.sdc
constraints/intel/: gameboy.sdc
constraints/xilinx/: gameboy.xdc
docs/: alcotest.md  bg-fetcher-implementation-plan.md  ppu.md  spec-todo.md  starting-loop-plan.md
roms/: Makefile  flat_bg.asm
spec/: dune
src/: dune  main.ml
src/ppu/: bg_fetcher_dmg.ml  bg_fetcher_dmg.mli  checker_fill.ml  checker_fill.mli  constants.ml  constants.mli  dune  framebuf.ml  framebuf.mli  top_checker_to_framebuf.ml  top_checker_to_framebuf.mli
src/rtl/ppu/: bg_fetcher_dmg.ml  bg_fetcher_dmg.mli  bg_fifo.ml  bitops_signal.ml  checker_fill.ml  constants.ml  constants.mli  dmg_palette_to_rgb555.ml  dune  framebuf.ml  line_controller.ml  top_bg_to_framebuf.ml  top_checker_to_framebuf.mli
src/shared/: bitops.ml  bitops.mli  dune  fb_index.ml  fb_index.mli  gb_addressing.ml  gb_addressing.mli  gb_palette.ml  gb_palette.mli  gb_pixels.ml  gb_pixels.mli
src/spec/: dune  phase1_checker_spec.ml  phase2_bg_spec.ml  ppm.ml  rgb.ml
src/spec/ppu/: bitops_int.ml  dune  gb_math_int.ml
synth_tool/: dune  synthesize.ml
test/: dune  oracle_lockstep.ml  spec_phase1_vs_sameboy.ml  spec_phase2_vs_sameboy.ml  test_bg_fetcher.ml  test_checker_fill_reset_start.ml  test_framebuf_assertion.ml  test_functor_equivalence.ml  test_shared.ml
tools/: Makefile  bin2c.sh  fake_gcc.sh  gcc  jules-setup.sh  sameboy_headless.c
