opam-version: "2.0"
name: "hardcaml-gameboy"
version: "0.1.0"
synopsis: "GameBoy emulator implemented in HardCaml"
description: "A cycle-accurate, synthesizable GameBoy implementation using HardCaml for hardware design"
maintainer: "bkase"
authors: ["bkase"]
license: "MIT"
homepage: "https://github.com/bkase/hardcaml-gameboy"
bug-reports: "https://github.com/bkase/hardcaml-gameboy/issues"
depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "3.0"}
  "hardcaml" {>= "0.16.0"}
  "hardcaml_waveterm" {>= "0.3.0"}
  "ppx_hardcaml" {>= "0.16.0"}
  "base"
  "stdio"
  "core"
  "alcotest" {with-test}
  "ppx_deriving" {>= "5.0"}
  "ppx_jane"
  "ocamlformat" {>= "0.26.0" & with-dev-setup}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/bkase/hardcaml-gameboy.git"