(rule
 (targets tools_and_roms_built)
 (deps
  (source_tree ../tools)
  (source_tree ../roms)
  (source_tree ../vendor))
 (action
  (progn
   (run make -C .. tools roms)
   (with-stdout-to %{targets} (echo "done")))))

(test
 (name oracle_lockstep)
 (libraries 
   alcotest
   hardcaml
   hardcaml_waveterm
   core
   core_unix 
   core_unix.sys_unix
   ppu)
 (deps
  tools_and_roms_built)
 (flags (:standard -w +26+8+11 -warn-error +26+8+11))
 (action
  (progn
   (run %{test}))))

