(rule
 (targets tools_and_roms_built)
 (deps
  ../tools/sameboy_headless.c
  ../tools/bin2c.sh
  ../vendor/SameBoy/BootROMs/dmg_boot.asm
  ../roms/flat_bg.asm
  (source_tree ../vendor/SameBoy))
 (action
  (progn
   (chdir
    %{workspace_root}
    (run make tools roms))
   (with-stdout-to
    %{targets}
    (echo "done")))))

(test
 (name oracle_lockstep)
 (libraries
  alcotest
  hardcaml
  hardcaml_waveterm
  core
  core_unix
  core_unix.sys_unix
  hardcaml_gameboy_rtl_ppu)
 (deps tools_and_roms_built)
 (flags
  (:standard -w +26+8+11 -warn-error +26+8+11))
 (action
  (progn
   (run %{test}))))

(test
 (name test_framebuf_assertion)
 (libraries alcotest hardcaml base stdio hardcaml_gameboy_rtl_ppu))


(test
 (name test_bg_fetcher)
 (libraries alcotest hardcaml hardcaml_waveterm base stdio hardcaml_gameboy_rtl_ppu)
 (flags
  (:standard -w +26+8+11 -warn-error +26+8+11)))

(test
 (name spec_phase1_vs_sameboy)
 (libraries alcotest core core_unix hardcaml_gameboy_spec gb_shared)
 (deps tools_and_roms_built)
 (flags (:standard -w -9-27)))

(test
 (name test_shared)
 (libraries alcotest core gb_shared)
 (flags (:standard -w -9-27)))
